kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: NTI-service
spec:
  selector:
    app: NTI
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
